<resources>
    <string name="app_name">Производство мебели</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Войти</string>
    <string name="register">Регистрация</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="furniture">Мебель</string>
</resources>